# ic-defi

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  test.sh
docs/: ARCHITECTURE.md
src/declarations/defi_backend/: index.d.ts  index.js
src/declarations/defi_frontend/: index.d.ts  index.js
src/defi_backend/: Cargo.toml  defi_backend.did
src/defi_backend/src/: lib.rs
src/defi_frontend/: index.html  package.json
src/defi_frontend/src/: App.js
