[package]
name = "defi_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
candid = "0.10.17"
ic-cdk = "0.18.5"
icrc-ledger-types = "0.1.10"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"